--- a/service/utility/tasks/create_list.yml
+++ b/service/utility/tasks/create_list.yml
@@ -2,5 +2,8 @@
 - name: create list
   set_fact:
     ? '{{ item }}_list'
-    : "{{ hostvars.localhost | json_query('*.' + item + '') | list }}"
+    : "{{ hostvars.localhost
+        | json_query('*.' + item + '')
+        | list
+      }}"
   loop: '{{ utility_task_list }}'
