--- a/service/utility/tasks/template.yml
+++ b/service/utility/tasks/template.yml
@@ -1,18 +1,18 @@
 ---
 - set_fact:
-    template_flattened_list: '{{ q("flattened", utility_template_list) }}'
+    flat_utility_template: '{{ utility_template_list | flatten }}'
 
 - name: template | recreate directory
   block:
     - include_tasks: '{{ helper_dir_remove }}'
       vars:
         path: '{{ item.dest }}'
-      loop: '{{ template_flattened_list }}'
+      loop: '{{ flat_utility_template }}'
 
     - include_tasks: '{{ helper_dir_create }}'
       vars:
         path: '{{ item.dest }}'
-      loop: '{{ template_flattened_list }}'
+      loop: '{{ flat_utility_template }}'
 
 - name: template | create config
   template:
@@ -20,4 +20,4 @@
     dest: '{{ item.dest }}/{{ item.filename }}'
   vars:
     data: '{{ item.vars | default(None) }}'
-  loop: '{{ template_flattened_list }}'
+  loop: '{{ flat_utility_template }}'
