get rid of unnecessary omit parameters

--- a/hosts.yml
+++ b/hosts.yml
@@ -5,7 +5,7 @@ local:
     ansible_connection: local
     ansible_python_interpreter: '{{ ansible_playbook_python }}'
     helper_path: '{{ service_roles }}/helper'
-    user_home: '{{ lookup("env","HOME") }}'
+    user_home: '{{ "$HOME" | expandvars }}'
     user_config: '{{ user_home }}/.config'
     dotfiles_directory: '{{ user_home }}/dotfiles'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
