--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ roles/sublime/files/sublime-text-3/*
 !roles/sublime/files/sublime-text-3/Packages/User/Preferences.sublime-settings
 #
 roles/vscode/files/Code/*
+roles/vscode/files/Code/User/workspaceStorage/*
+!roles/vscode/files/Code/User/
 !roles/vscode/files/Code/User/snippets/
 !roles/vscode/files/Code/User/keybindings.json
 !roles/vscode/files/Code/User/settings.json
