break the gsettings task into three small tasks

--- a/playbook.yml
+++ b/playbook.yml
@@ -20,7 +20,9 @@
     - optimization
     - zsh
     - git
-    - gsettings
+    - desktop
+    - nautilus
+    - dash_to_panel
     - nvm
     - emacs
     - vscode
