--- a/roles/desktop/defaults/main.yml
+++ b/roles/desktop/defaults/main.yml
@@ -4,3 +4,33 @@ utility_copy:
   paths:
     - src: '{{ dotfiles_roles }}/desktop/files/Templates'
       dest: '{{ user_home }}'
+
+desktop_settings:
+  - key: '/org/gnome/desktop/background/color-shading-type'
+    value: "'solid'"
+  - key: '/org/gnome/desktop/background/primary-color'
+    value: "'#333'"
+  - key: '/org/gnome/desktop/input-sources/per-window'
+    value: 'true'
+  - key: '/org/gnome/desktop/input-sources/sources'
+    value: "@a(ss) [('xkb', 'us'), ('xkb', 'ru')]"
+  - key: '/org/gnome/desktop/input-sources/xkb-options'
+    value: "['grp:shift_caps_switch']"
+  - key: '/org/gnome/desktop/interface/clock-show-date'
+    value: 'true'
+  - key: '/org/gnome/desktop/interface/monospace-font-name'
+    value: "'Hack 12'"
+  - key: '/org/gnome/desktop/lockdown/disable-lock-screen'
+    value: 'false'
+  - key: '/org/gnome/desktop/privacy/report-technical-problems'
+    value: 'false'
+  - key: '/org/gnome/desktop/sound/event-sounds'
+    value: 'false'
+  - key: '/org/gnome/desktop/wm/preferences/audible-bell'
+    value: 'false'
+  - key: '/org/gnome/desktop/wm/preferences/num-workspaces'
+    value: '4'
+  - key: '/org/gnome/mutter/dynamic-workspaces'
+    value: 'false'
+  - key: '/org/gnome/online-accounts/whitelisted-providers'
+    value: '@as []'
