--- a/roles/copyq/files/copyq/copyq.conf
+++ b/roles/copyq/files/copyq/copyq.conf
@@ -1,5 +1,21 @@
-[General]
-plugin_priority=itemtext, itemnotes, itempinned, itemimage, itemencrypted, itemfakevim, itemsync, itemtags, itemdata
+[Options]
+activate_pastes=false
+always_on_top=true
+confirm_exit=false
+hide_toolbar=true
+maxitems=1000
+show_tab_item_count=true
+
+[Plugins]
+itemdata\enabled=false
+itemencrypted\enabled=false
+itemfakevim\enabled=false
+itemimage\enabled=false
+itemnotes\enabled=false
+itempinned\enabled=false
+itemsync\enabled=false
+itemtags\enabled=true
+itemtext\enabled=false
 
 [Commands]
 1\Command="copyq:\nif (!copy())\n  abort()\n\nvar text = str(clipboard())\n\nvar newText = text.toUpperCase()\nif (text == newText)\n  newText = text.toLowerCase()\n\nif (text == newText)\n  abort();\n\ncopy(newText)\npaste()"
@@ -21,195 +37,61 @@ plugin_priority=itemtext, itemnotes, itempinned, itemimage, itemencrypted, itemf
 4\Command="copyq:\nvar time = dateString('dd.MM.yy')\nsetData('application/x-copyq-user-copy-time', time)\nvar tagsMime = 'application/x-copyq-tags'\nvar tags = str(data(tagsMime)) + ', ' + time\nsetData(tagsMime, tags)"
 4\Icon=\xf017
 4\Name=Store Copy Time
-5\Icon=\xf15b
-5\Name=New command
-6\Command=copyq: toggle()
-6\GlobalShortcut=ctrl+shift+1
-6\Icon=\xf022
-6\IsGlobalShortcut=true
-6\Name=Show/hide main window
-7\Command=copyq: plugins.itempinned.pinData()
-7\Icon=\xf08d
-7\InMenu=true
-7\Input=!OUTPUT
-7\Name=Pin
-7\Output=application/x-copyq-item
-7\Shortcut=ctrl+shift+p
-8\Command=copyq: plugins.itempinned.unpinData()
-8\Icon=\xf08d
-8\InMenu=true
-8\Input=application/x-copyq-item-pinned
-8\Name=Unpin
-8\Shortcut=ctrl+shift+p
-size=8
-
-[Options]
-action_has_input=false
-action_has_output=false
-action_output_tab=
-action_separator=\\n
-activate_closes=true
-activate_focuses=false
-activate_pastes=false
-always_on_top=false
-autocompletion=true
-autostart=true
-check_clipboard=true
-check_selection=false
-clipboard_notification_lines=0
-clipboard_tab=&clipboard
-command_history_size=100
-confirm_exit=false
-copy_clipboard=false
-copy_selection=false
-disable_tray=false
-edit_ctrl_return=true
-editor=emacs %1
-expire_tab=0
-hide_main_window=false
-hide_tabs=false
-hide_toolbar=true
-hide_toolbar_labels=true
-item_popup_interval=0
-language=en
-maxitems=1000
-move=true
-notification_horizontal_offset=10
-notification_maximum_height=100
-notification_maximum_width=300
-notification_position=3
-notification_vertical_offset=10
-open_windows_on_current_screen=true
-save_filter_history=false
-show_advanced_command_settings=true
-show_simple_items=false
-show_tab_item_count=true
-tab_tree=false
-tabs=&clipboard
-text_wrap=true
-transparency=0
-transparency_focused=0
-tray_commands=true
-tray_images=true
-tray_item_paste=true
-tray_items=5
-tray_tab=
-tray_tab_is_current=true
-vi=false
-
-[Plugins]
-itemdata\enabled=false
-itemdata\formats=text/uri-list, text/xml
-itemdata\max_bytes=256
-itemencrypted\enabled=false
-itemfakevim\enabled=false
-itemimage\enabled=false
-itemimage\image_editor=
-itemimage\max_image_height=240
-itemimage\max_image_width=320
-itemimage\svg_editor=
-itemnotes\enabled=false
-itemnotes\icon_only=false
-itemnotes\notes_at_bottom=false
-itemnotes\show_tooltip=false
-itempinned\enabled=true
-itemsync\enabled=false
-itemsync\format_settings=@Invalid()
-itemsync\sync_tabs=@Invalid()
-itemtags\enabled=true
-itemtags\tags=@Invalid()
-itemtext\enabled=false
-itemtext\max_height=0
-itemtext\max_lines=0
-itemtext\use_rich_text=false
-
-[Shortcuts]
-about=shift+f1
-change_tab_icon=ctrl+shift+t
-commands=f6
-copy_selected_items=ctrl+c
-delete_item=del
-edit=f2
-edit_notes=shift+f2
-editor=ctrl+e
-exit=ctrl+q
-export=ctrl+s
-find_items=ctrl+g
-format-next=ctrl+right
-format-previous=ctrl+left
-help=f1
-import=ctrl+i
-move_down=ctrl+down
-move_to_bottom=ctrl+end
-move_to_clipboard=
-move_to_top=ctrl+home
-move_up=ctrl+up
-new=ctrl+n
-new_tab=ctrl+t
-next_tab=right
-paste_selected_items=ctrl+v
-preferences=ctrl+p
-previous_tab=left
-process_manager=ctrl+shift+z
-remove_tab=ctrl+w
-rename_tab=ctrl+f2
-reverse_selected_items=ctrl+shift+r
-show-log=f12
-show_clipboard_content=ctrl+shift+c
-show_item_content=f4
-show_item_preview=f7
-sort_selected_items=ctrl+shift+s
-system-run=f5
-toggle_clipboard_storing=ctrl+shift+x
+5\Command=copyq: toggle()
+5\GlobalShortcut=ctrl+shift+1
+5\Icon=\xf022
+5\IsGlobalShortcut=true
+5\Name=Show/hide main window
+size=5
 
 [Theme]
-alt_bg=#e0e0e0
+alt_bg=#383838
 alt_item_css=
-bg=#eeeeee
+bg=#4b4b4b
 css=
 cur_item_css="\n    ;border: 0.1em solid ${sel_bg}"
-edit_bg=#cccccc
-edit_fg=fg - #111
-edit_font="monospace,11,-1,5,50,0,0,0,0,0"
-fg=#444444
-find_bg="rgba(0,0,0,0)"
-find_fg=#9d7200
-find_font="monospace,11,-1,5,50,0,0,0,0,0"
-font="monospace,11,-1,5,50,0,0,0,0,0"
+edit_bg=#ffffff
+edit_fg=#1a1a1a
+edit_font="Ubuntu,13,-1,5,50,0,0,0,0,0"
+fg=#dfdfdf
+find_bg=#00689c
+find_fg=#ffffff
+find_font="Ubuntu,13,-1,5,50,0,0,0,0,0"
+font="Ubuntu,13,-1,5,50,0,0,0,0,0"
 font_antialiasing=true
-item_css=padding:0.5em
+item_css=
 item_spacing=
-menu_bar_css="\n    ;background: ${bg}\n    ;color: ${fg + #444}"
+menu_bar_css="\n    ;background: ${bg}\n    ;color: ${fg}"
 menu_bar_disabled_css="\n    ;color: ${bg - #666}"
 menu_bar_selected_css="\n    ;background: ${sel_bg}\n    ;color: ${sel_fg}"
 menu_css="\n    ;border-top: 0.08em solid ${bg + #333}\n    ;border-left: 0.08em solid ${bg + #333}\n    ;border-bottom: 0.08em solid ${bg - #333}\n    ;border-right: 0.08em solid ${bg - #333}"
-notes_bg=bg
+notes_bg=#ffffff
 notes_css=
-notes_fg=#666666
-notes_font="sans-serif,11,-1,5,25,0,0,0,0,0"
-notification_bg=#303030
+notes_fg=#232323
+notes_font="Ubuntu,13,-1,5,50,0,0,0,0,0"
+notification_bg=#333
 notification_fg=#ddd
-notification_font="monospace,11,-1,5,50,0,0,0,0,0"
-num_fg=#009588
-num_font="sans-serif,8,-1,5,25,0,0,0,0,0"
+notification_font="Ubuntu,12,-1,5,50,0,0,0,0,0"
+num_fg=#babdb6
+num_font="Ubuntu,9,-1,5,25,0,0,0,0,0"
 search_bar="\n    ;background: ${edit_bg}\n    ;color: ${edit_fg}\n    ;border: 1px solid ${alt_bg}\n    ;margin: 2px"
 search_bar_focused="\n    ;border: 1px solid ${sel_bg}"
-sel_bg=#7dcad1
-sel_fg=#444444
+sel_bg=#61819c
+sel_fg=#ffffff
 sel_item_css=
 show_number=true
 show_scrollbars=false
 style_main_window=true
 tab_bar_css="\n    ;background: ${bg - #222}"
-tab_bar_item_counter="\n    ;color: ${num_fg + #222}\n    ;font-size: 7pt"
+tab_bar_item_counter="\n    ;color: ${fg - #044 + #400}\n    ;font-size: 6pt"
 tab_bar_scroll_buttons_css="\n    ;background: ${bg - #222}\n    ;color: ${fg}\n    ;border: 0"
-tab_bar_sel_item_counter="\n    ;color: ${num_fg}"
+tab_bar_sel_item_counter="\n    ;color: ${sel_bg - #044 + #400}"
 tab_bar_tab_selected_css="\n    ;padding: 0.5em\n    ;background: ${bg}\n    ;border: 0.05em solid ${bg}\n    ;color: ${fg}"
 tab_bar_tab_unselected_css="\n    ;border: 0.05em solid ${bg}\n    ;padding: 0.5em\n    ;background: ${bg - #222}\n    ;color: ${fg - #333}"
-tab_tree_css="\n    ;font-family: sans-serif\n    ;font-size: 10pt\n    ;padding: .20em\n    ;color: ${fg + #222}\n    ;background-color: ${bg}"
-tab_tree_item_counter="\n    ;padding:.33em\n    ;color: ${num_fg + #222}\n    ;font-size: 7pt"
-tab_tree_sel_item_counter="\n    ;color: ${num_fg}"
-tab_tree_sel_item_css="\n    ;color: ${fg + #222}\n    ;background: ${bg - #211}"
+tab_tree_css="\n    ;color: ${fg}\n    ;background-color: ${bg}"
+tab_tree_item_counter="\n    ;color: ${fg - #044 + #400}\n    ;font-size: 6pt"
+tab_tree_sel_item_counter="\n    ;color: ${sel_fg - #044 + #400}"
+tab_tree_sel_item_css="\n    ;color: ${sel_fg}\n    ;background-color: ${sel_bg}\n    ;border-radius: 2px"
 tool_bar_css="\n    ;color: ${fg}\n    ;background-color: ${bg}\n    ;border: 0"
 tool_button_css="\n    ;background-color: transparent"
 tool_button_selected_css="\n    ;background: ${sel_bg}\n    ;color: ${sel_fg}"
