--- a/roles/calibre/defaults/main.yml
+++ b/roles/calibre/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 utility_copy:
-  dir: '{{ user_config }}/calibre'
+  dir:
+    - '{{ user_config }}/calibre'
   paths:
     - src: '{{ dotfiles_roles }}/calibre/files/calibre'
       dest: '{{ user_config }}'
