--- a/roles/firefox/defaults/main.yml
+++ b/roles/firefox/defaults/main.yml
@@ -7,7 +7,8 @@ utility_package:
       - 'firefox-locale-en'
 
 utility_copy:
-  dir: '{{ user_home }}/.mozilla'
+  dir:
+    - '{{ user_home }}/.mozilla'
   paths:
     - src: '{{ dotfiles_roles }}/firefox/files/.mozilla'
       dest: '{{ user_home }}'
