--- a/roles/libreoffice/defaults/main.yml
+++ b/roles/libreoffice/defaults/main.yml
@@ -7,7 +7,8 @@ utility_package:
       - 'libreoffice-style-sifr'
 
 utility_copy:
-  dir: '{{ user_config }}/libreoffice'
+  dir:
+    - '{{ user_config }}/libreoffice'
   paths:
     - src: '{{ dotfiles_roles }}/libreoffice/files/libreoffice'
       dest: '{{ user_config }}'
