--- a/hosts.yml
+++ b/hosts.yml
@@ -11,4 +11,5 @@ local:
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
     service_roles: '{{ dotfiles_directory }}/service'
     sync_directory: '{{ user_home }}/sync'
+    ubuntu_codename: 'bionic'
     git_protocol: 'git@github.com:in-in/dotfiles.git'
