--- a/roles/audacity/defaults/main.yml
+++ b/roles/audacity/defaults/main.yml
@@ -6,7 +6,8 @@ utility_package:
       - 'audacity'
 
 utility_copy:
-  dir: '{{ user_home }}/.audacity-data'
+  dir:
+    - '{{ user_home }}/.audacity-data'
   paths:
     - src: '{{ dotfiles_roles }}/audacity/files/.audacity-data'
       dest: '{{ user_home }}'
