--- a/roles/cmus/defaults/main.yml
+++ b/roles/cmus/defaults/main.yml
@@ -5,7 +5,8 @@ utility_package:
       - 'cmus'
 
 utility_copy:
-  dir: '{{ user_config }}/cmus'
+  dir:
+    - '{{ user_config }}/cmus'
   paths:
     - src: '{{ dotfiles_roles }}/cmus/files/cmus'
       dest: '{{ user_config }}'
