--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -3,29 +3,37 @@ utility_package:
   apt:
     install:
       - 'anki'
-      - 'curl'
       - 'dconf-editor'
       - 'fonts-hack'
       - 'fonts-roboto-hinted'
-      - 'gnome-tweaks'
       - 'hunspell-ru'
       - 'hunspell'
-      - 'synaptic'
       - 'tree'
     remove:
-      - 'gnome-getting-started-docs'
-      - 'gnome-initial-setup'
-      - 'gnome-software-common'
-      - 'gnome-software-plugin-snap'
-      - 'gnome-software'
-      - 'ubuntu-release-upgrader-core'
-      - 'ubuntu-release-upgrader-gtk'
-      - 'ubuntu-report'
-      - 'ubuntu-software'
-      - 'update-manager-core'
-      - 'update-manager'
-      - 'update-notifier-common'
-      - 'update-notifier'
+      - 'hexchat-common'
+      - 'hexchat'
+      - 'libreoffice-draw'
+      - 'libreoffice-impress'
+      - 'libreoffice-ogltrans'
+      - 'mintreport'
+      - 'mintwelcome'
+      - 'tomboy'
+      # rhythmbox
+      - 'rhythmbox'
+      - 'rhythmbox-data'
+      - 'rhythmbox-plugin-tray-icon'
+      - 'rhythmbox-plugins'
+      - 'librhythmbox-core10'
+      # xplayer
+      - 'xplayer'
+      - 'xplayer-common'
+      - 'xplayer-dbg'
+      - 'xplayer-plugins'
+      - 'libxplayer0'
+      - 'gir1.2-xplayer-1.0'
+      - 'libxplayer-plparser18'
+      - 'gir1.2-xplayer-plparser-1.0'
+
   pip:
     install:
       - name: 'glances'
