--- a/roles/copyq/defaults/main.yml
+++ b/roles/copyq/defaults/main.yml
@@ -7,9 +7,12 @@ utility_package:
     install:
       - 'copyq'
 
-utility_link:
-  src: '{{ dotfiles_roles }}/copyq/files/copyq'
-  dest: '{{ user_config }}/copyq'
+utility_copy:
+  dir:
+    - '{{ user_config }}/copyq'
+  paths:
+    - src: '{{ dotfiles_roles }}/copyq/files/copyq'
+      dest: '{{ user_config }}'
 
 utility_gitignore:
   ignore:
