--- a/service/utility/tasks/main.yml
+++ b/service/utility/tasks/main.yml
@@ -1,12 +1,8 @@
 ---
-- name: main | create helpers vars
-  set_fact:
-    'helper_{{ item.path | splitext | first }}': '{{ item.src }}'
-  loop: '{{ q("filetree", helper_path) }}'
-
 - name: main | include all tasks
   include_tasks: '{{ role_path }}/tasks/{{ outer_item }}.yml'
   loop:
+    - helper
     - global_config
     - create_list
     - key
