add mintupdate & cinnamon applets

--- a/playbook.yml
+++ b/playbook.yml
@@ -17,11 +17,12 @@
 
   roles:
     - utility
-    # - optimization
+    - optimization
     - zsh
     - git
     - cinnamon
     - gnome
+    - mintupdate
     - nemo
     - nvm
     - emacs
