--- a/roles/cinnamon/defaults/main.yml
+++ b/roles/cinnamon/defaults/main.yml
@@ -27,12 +27,10 @@ cinnamon_settings:
     value: 'false'
   - key: '/org/cinnamon/desktop/wm/preferences/audible-bell'
     value: 'false'
-  - key: '/org/cinnamon/desktop/screensaver/screensaver-name'
-    value: "'xscreensaver@cinnamon.org'"
-  - key: '/org/cinnamon/desktop/screensaver/xscreensaver-hack'
-    value: "'apple2'"
-  - key: '/org/cinnamon/desktop/screensaver/lock-enabled'
-    value: 'false'
+  - key: '/org/cinnamon/settings-daemon/plugins/power/sleep-display-ac'
+    value: '300'
+  - key: '/org/cinnamon/settings-daemon/plugins/power/sleep-display-battery'
+    value: '300'
   - key: '/org/cinnamon/alttab-switcher-style'
     value: "'icons'"
   - key: '/org/cinnamon/muffin/placement-mode'
@@ -67,5 +65,17 @@ cinnamon_settings:
     value: '1000'
   - key: '/org/cinnamon/workspace-osd-visible'
     value: 'false'
+  - key: '/org/gnome/desktop/peripherals/touchpad/natural-scroll'
+    value: 'false'
+  - key: '/org/cinnamon/settings-daemon/peripherals/touchpad/horizontal-scrolling'
+    value: 'true'
+  - key: '/org/cinnamon/settings-daemon/peripherals/touchpad/custom-acceleration'
+    value: 'true'
+  - key: '/org/cinnamon/settings-daemon/peripherals/touchpad/motion-acceleration'
+    value: '10.0'
+  - key: '/org/cinnamon/settings-daemon/peripherals/mouse/custom-acceleration'
+    value: 'true'
+  - key: '/org/cinnamon/settings-daemon/peripherals/mouse/motion-acceleration'
+    value: '10.0'
   - key: '/org/cinnamon/enabled-applets'
     value: "['panel1:left:0:menu@cinnamon.org:15', 'panel1:left:3:window-list@cinnamon.org:18', 'panel1:right:1:notifications@cinnamon.org:20', 'panel1:right:2:systray@cinnamon.org:14', 'panel1:right:3:removable-drives@cinnamon.org:21', 'panel1:right:4:keyboard@cinnamon.org:19', 'panel1:right:5:blueberry@cinnamon.org:28', 'panel1:right:6:network@cinnamon.org:23', 'panel1:right:7:sound@cinnamon.org:27', 'panel1:right:8:user@cinnamon.org:22', 'panel1:right:9:power@cinnamon.org:25', 'panel1:right:10:trash@cinnamon.org:29', 'panel1:right:11:calendar@cinnamon.org:26', 'panel1:right:12:workspace-grid@hernejj:14']"
