--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -15,6 +15,8 @@ utility_package:
       - 'libreoffice-draw'
       - 'libreoffice-impress'
       - 'libreoffice-ogltrans'
+      - 'mint-artwork'
+      - 'mint-backgrounds-*'
       - 'mintreport'
       - 'mintwelcome'
       - 'tomboy'
