remove ansible-lint

--- a/roles/vscode/defaults/main.yml
+++ b/roles/vscode/defaults/main.yml
@@ -11,9 +11,8 @@ utility_package:
       - 'code'
   pip:
     install:
-      - name: ansible-lint
-      - name: pylint
-      - name: yapf
+      - name: 'pylint'
+      - name: 'yapf'
 
 utility_link:
   src: '{{ dotfiles_roles }}/vscode/files/Code'
@@ -37,7 +36,6 @@ vscode_extensions:
   - 'esbenp.prettier-vscode'
   - 'joshpeng.sublime-babel-vscode'
   - 'ms-python.python'
-  - 'rupisaini.vscode-ansible-linter'
   - 'samuelcolvin.jinjahtml'
   - 'vscoss.vscode-ansible'
   - 'wayou.vscode-todo-highlight'
