--- a/hosts.yml
+++ b/hosts.yml
@@ -4,12 +4,11 @@ local:
   vars:
     ansible_connection: local
     ansible_python_interpreter: '{{ ansible_playbook_python }}'
-    helper_path: '{{ service_roles }}/helper'
+    helper_path: '{{ dotfiles_directory }}/service/helper'
     user_home: '{{ "$HOME" | expandvars }}'
     user_config: '{{ user_home }}/.config'
-    dotfiles_directory: '{{ user_home }}/dotfiles'
+    dotfiles_directory: '{{ user_home }}/dots'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
-    service_roles: '{{ dotfiles_directory }}/service'
     sync_directory: '{{ user_home }}/sync'
     ubuntu_codename: 'bionic'
-    git_protocol: 'git@github.com:in-in/dotfiles.git'
+    git_protocol: 'git@bitbucket.org:dmin/dots.git'
