--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -4,6 +4,7 @@ utility_package:
     install:
       - 'anki'
       - 'dconf-editor'
+      - 'htop'
       - 'hunspell-ru'
       - 'hunspell'
       - 'tree'
@@ -33,9 +34,6 @@ utility_package:
       - 'gir1.2-xplayer-1.0'
       - 'libxplayer-plparser18'
       - 'gir1.2-xplayer-plparser-1.0'
-  pip:
-    install:
-      - name: 'glances'
 
 utility_gitignore:
   ignore:
