remove test repo

--- a/hosts.yml
+++ b/hosts.yml
@@ -7,8 +7,8 @@ local:
     helper_path: '{{ dotfiles_directory }}/service/helper'
     user_home: '{{ "$HOME" | expandvars }}'
     user_config: '{{ user_home }}/.config'
-    dotfiles_directory: '{{ user_home }}/dots'
+    dotfiles_directory: '{{ user_home }}/dotfiles'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
     sync_directory: '{{ user_home }}/sync'
     ubuntu_codename: 'bionic'
-    git_protocol: 'git@bitbucket.org:dmin/dots.git'
+    git_protocol: 'git@github.com:in-in/dotfiles.git'
