fix middle-click emulation

--- a/roles/cinnamon/defaults/main.yml
+++ b/roles/cinnamon/defaults/main.yml
@@ -77,6 +77,14 @@ cinnamon_settings:
     value: 'true'
   - key: '/org/cinnamon/settings-daemon/peripherals/touchpad/motion-acceleration'
     value: '10.0'
+  - key: '/org/cinnamon/settings-daemon/peripherals/touchpad/custom-threshold'
+    value: 'true'
+  - key: '/org/cinnamon/settings-daemon/peripherals/touchpad/motion-threshold'
+    value: '1'
+  - key: '/org/cinnamon/settings-daemon/peripherals/touchpad/clickpad-click'
+    value: '2'
+  - key: '/org/cinnamon/settings-daemon/peripherals/touchpad/scrolling-method'
+    value: '1'
   - key: '/org/cinnamon/settings-daemon/peripherals/mouse/custom-acceleration'
     value: 'true'
   - key: '/org/cinnamon/settings-daemon/peripherals/mouse/motion-acceleration'
