--- a/service/utility/tasks/link.yml
+++ b/service/utility/tasks/link.yml
@@ -18,6 +18,7 @@
   file:
     src: '{{ item.src }}'
     dest: '{{ item.dest }}'
+    follow: no
     force: yes
     state: link
   loop: '{{ flat_utility_link }}'
