--- a/roles/vscode/files/Code/User/settings.json
+++ b/roles/vscode/files/Code/User/settings.json
@@ -9,6 +9,7 @@
     "borderColor : {color}; opacity: 0.3"
   ],
   "bracketPairColorizer.showHorizontalScopeLine": false,
+  "breadcrumbs.enabled": true,
   "editor.fontFamily": "Iosevka SS08, monospace",
   "editor.fontLigatures": true,
   "editor.fontSize": 16,
@@ -21,6 +22,7 @@
   "editor.tabSize": 2,
   "editor.wordWrap": "on",
   "explorer.confirmDelete": false,
+  "extensions.autoUpdate": false,
   "extensions.ignoreRecommendations": true,
   "extensions.showRecommendationsOnlyOnDemand": true,
   "python.formatting.provider": "yapf",
@@ -38,13 +40,17 @@
     "**/*.tsx",
     "**/*.yml"
   ],
+  "update.channel": "none",
   "update.enableWindowsBackgroundUpdates": false,
+  "update.showReleaseNotes": false,
   "vsicons.dontShowNewVersionMessage": true,
   "window.menuBarVisibility": "toggle",
   "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
+  "window.titleBarStyle": "custom",
   "workbench.activityBar.visible": false,
   "workbench.colorTheme": "Dracula Soft",
   "workbench.editor.showTabs": false,
+  "workbench.enableExperiments": false,
   "workbench.iconTheme": "vscode-icons",
   "workbench.sideBar.location": "right",
   "workbench.startupEditor": "none",
