add filesystem role

--- a/hosts.yml
+++ b/hosts.yml
@@ -12,3 +12,5 @@ local:
     sync_directory: '{{ user_home }}/sync'
     ubuntu_codename: 'bionic'
     git_protocol: 'git@github.com:in-in/dotfiles.git'
+    storage_ext_id: '12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
+    chapter27: '/media/{{ ansible_user_id }}/chapter27'
