fix storage paths

--- a/hosts.yml
+++ b/hosts.yml
@@ -7,6 +7,7 @@ local:
     helper_path: '{{ dotfiles_directory }}/service/helper'
     user_home: '{{ "$HOME" | expandvars }}'
     user_config: '{{ user_home }}/.config'
+    user_storage: '{{ user_home }}/storage'
     dotfiles_directory: '{{ user_home }}/dotfiles'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
     sync_directory: '{{ user_home }}/sync'
